# svm

counter - native/: Cargo.toml
counter - native/client/: client.rs
counter - native/src/: entrypoint.rs  lib.rs
counter - native/src/instruction/: decrement_counter.rs  increment_counter.rs  initialize_counter.rs  mod.rs
counter - native/src/state/: counter.rs
counter - native/tests/: index.test.ts  package.json
escrow - anchor, native/native - pinocchio/: Cargo.toml
escrow - anchor, native/native - pinocchio/src/: entrypoint.rs  lib.rs
escrow - pinocchio/native_pinocchio/: Cargo.toml
escrow - pinocchio/native_pinocchio/src/: entrypoint.rs  lib.rs
magic-block/cpi/pinocchio-escrow/: Cargo.toml
magic-block/cpi/pinocchio-escrow/src/: entrypoint.rs
magic-block/cpi/pinocchio-escrow/src/instruction/: delegate.rs  mod.rs
native/: Cargo.toml  README.md  test-wallet.json
native/src/: constants.rs  entrypoint.rs  instructions.rs  lib.rs  processor.rs  state.rs
native/src/instruction/: decrement_counter.rs  increment_counter.rs  initialize_counter.rs
native/src/instructions/: increment.rs  mod.rs
native/src/state/: counter.rs  data.rs
native/tests/: README.md  index.test.ts
native/tests/state-types/: types.ts
vault - anchor, native/native - pinocchio/: Cargo.toml
vault - anchor, native/native - pinocchio/src/: entrypoint.rs  error.rs  lib.rs
vault - anchor, native/native - pinocchio/tests/: sample_tests.rs  unit_tests.rs
vault - pinocchio/native_pinocchio/: Cargo.toml
vault - pinocchio/native_pinocchio/src/: entrypoint.rs  lib.rs
(+13 files in other folders)
