[package]
name = "pinocchio-3"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.8.1"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
pinocchio-token = "0.3.0"
bytemuck = { version = "1.19.0", features = ["derive" , "const_zeroed"] }
borsh = "0.10.3"

[dev-dependencies]
solana-sdk = "2.1.0"
mollusk-svm = "0.1.4"
spl-token = "8.0.0"

[features]
no-entrypoint = []
std = []
test-default = ["no-entrypoint", "std"]

ephemeral-rollups-sdk-attribute-delegate = { workspace = true }
ephemeral-rollups-sdk-attribute-ephemeral = { workspace = true }
ephemeral-rollups-sdk-attribute-commit = { workspace = true }

